test/rbkt/Queries/zorba/error/warning1.xq
(:
 : test if the warning module is syntactically correct
 :)
import module namespace zwarn = "http://www.zorba-xquery.com/warnings";

$zwarn:ZWST0002
